--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -162,6 +162,208 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_size</th>\n",
+       "      <th>interest_rate</th>\n",
+       "      <th>borrower_income</th>\n",
+       "      <th>debt_to_income</th>\n",
+       "      <th>num_of_accounts</th>\n",
+       "      <th>derogatory_marks</th>\n",
+       "      <th>total_debt</th>\n",
+       "      <th>loan_status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10700.0</td>\n",
+       "      <td>7.672</td>\n",
+       "      <td>52800</td>\n",
+       "      <td>0.431818</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22800</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8400.0</td>\n",
+       "      <td>6.692</td>\n",
+       "      <td>43600</td>\n",
+       "      <td>0.311927</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13600</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9000.0</td>\n",
+       "      <td>6.963</td>\n",
+       "      <td>46100</td>\n",
+       "      <td>0.349241</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16100</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10700.0</td>\n",
+       "      <td>7.664</td>\n",
+       "      <td>52700</td>\n",
+       "      <td>0.430740</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10800.0</td>\n",
+       "      <td>7.698</td>\n",
+       "      <td>53000</td>\n",
+       "      <td>0.433962</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77531</th>\n",
+       "      <td>19100.0</td>\n",
+       "      <td>11.261</td>\n",
+       "      <td>86600</td>\n",
+       "      <td>0.653580</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>56600</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77532</th>\n",
+       "      <td>17700.0</td>\n",
+       "      <td>10.662</td>\n",
+       "      <td>80900</td>\n",
+       "      <td>0.629172</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50900</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77533</th>\n",
+       "      <td>17600.0</td>\n",
+       "      <td>10.595</td>\n",
+       "      <td>80300</td>\n",
+       "      <td>0.626401</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50300</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77534</th>\n",
+       "      <td>16300.0</td>\n",
+       "      <td>10.068</td>\n",
+       "      <td>75300</td>\n",
+       "      <td>0.601594</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45300</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77535</th>\n",
+       "      <td>15600.0</td>\n",
+       "      <td>9.742</td>\n",
+       "      <td>72300</td>\n",
+       "      <td>0.585062</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>42300</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>77536 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
+       "0        10700.0          7.672            52800        0.431818   \n",
+       "1         8400.0          6.692            43600        0.311927   \n",
+       "2         9000.0          6.963            46100        0.349241   \n",
+       "3        10700.0          7.664            52700        0.430740   \n",
+       "4        10800.0          7.698            53000        0.433962   \n",
+       "...          ...            ...              ...             ...   \n",
+       "77531    19100.0         11.261            86600        0.653580   \n",
+       "77532    17700.0         10.662            80900        0.629172   \n",
+       "77533    17600.0         10.595            80300        0.626401   \n",
+       "77534    16300.0         10.068            75300        0.601594   \n",
+       "77535    15600.0          9.742            72300        0.585062   \n",
+       "\n",
+       "       num_of_accounts  derogatory_marks  total_debt  loan_status  \n",
+       "0                    5                 1       22800            0  \n",
+       "1                    3                 0       13600            0  \n",
+       "2                    3                 0       16100            0  \n",
+       "3                    5                 1       22700            0  \n",
+       "4                    5                 1       23000            0  \n",
+       "...                ...               ...         ...          ...  \n",
+       "77531               12                 2       56600            1  \n",
+       "77532               11                 2       50900            1  \n",
+       "77533               11                 2       50300            1  \n",
+       "77534               10                 2       45300            1  \n",
+       "77535                9                 2       42300            1  \n",
+       "\n",
+       "[77536 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lending_df"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -365,6 +567,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Step 0: Scale the data using `StandardScaler`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Instantiate a StandardScaler instance\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Fit the training data to the standard scaler\n",
+    "X_scaler = scaler.fit(X_train)\n",
+    "\n",
+    "# Transform the training data using the scaler\n",
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "\n",
+    "# Transform the testing data using the scaler\n",
+    "X_test_scaled = X_scaler.transform(X_test)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -374,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,10 +613,10 @@
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "logistic_regression_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "# YOUR CODE HERE!"
+    "lr_model = logistic_regression_model.fit(X_train_scaled, y_train)"
    ]
   },
   {
