Answered prediction question

--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Credit Risk Classification\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +157,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,13 +165,14 @@
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
     "lending_df = pd.read_csv(Path('..', 'Resources', 'lending_data.csv'))\n",
+    "\n",
     "# Review the DataFrame\n",
     "lending_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +363,7 @@
        "[77536 rows x 8 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +555,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Split the data using train_test_split\n",
-    "# Assign a random_state of 1 to the function\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
    ]
   },
@@ -575,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +620,6 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Instantiate the Logistic Regression model\n",
-    "# Assign a random_state parameter of 1 to the model\n",
     "logistic_regression_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
@@ -670,6 +677,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Interpretation\n",
+    "- 18652 True Negatives: The model correctly predicted 18,652 instances as belonging to a low-risk loan\n",
+    "- 113 False Positives: The model incorrectly predicted 113 instances as high-risk when they were actually low-risk.\n",
+    "- 9 False Negatives: The model incorrectly predicted 9 instances as low-risk, when they were actually high-risk loans.\n",
+    "- 610 True Positives: The model correctly predicted 610 instances as a high-risk loan."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -713,7 +731,10 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:**\n",
+    "Overall, the model performs well in predicting low-risk and high-risk loans and is particularly strong at identifying low-risk borrowers.\n",
+    "- Low-Risk Loans: The model's precision (100%) and recall (99%) are near-perfect, which gives confidence to its ability to identify low-risk borrowers and minimize misclassifications.\n",
+    "- High-Risk Loans: The model shows slightly lower precision (86%) when identifying high-risk borrowers. This lower precision indicates a small number of false positives, where some low-risk loans were incorrectly categorized as high-risk by the model."
    ]
   },
   {
